# TestWorks

./: .dockerignore  .gitignore  LICENSE  README.md  dev-compose.yml  dev.Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini  test-integration.yml  test.Dockerfile  test.yml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: cleanup_workflows.yml  codacy.yml  run_build_and_tests.yml  snyk-security.yml
.run/: Database.run.xml  FastAPI.run.xml  React start.run.xml
app/: main.py  schema.py
backend/: .dockerignore  crud.py  main.py  pyproject.toml  pytest.ini  test.Dockerfile
backend-app/: database.py  main.py  models.py
backend-app/routes/: reports.py  users.py
backend/app/: crud.py  database.py  main.py  models.py
backend/app/routes/: login.py  reports.py  users.py  websockets.py
backend/routes/: login.py  reports.py  users.py
backend/tests/integration/: conftest.py
backend/tests/integration/login/: test_login.py
backend/tests/integration/redis/: test_redis.py
backend/tests/integration/reports/: test_create_report.py  test_get_report.py
backend/tests/integration/users/: test_create_user.py
backend/tests/integration/websockets/: test_websockets.py
backend/tests/unit/: test_crud.py  test_db.py  test_model.py  test_redis_token.py  test_schema.py
frontend/: .dockerignore  package-lock.json  package.json  test.Dockerfile
frontend-app/: package-lock.json  package.json
frontend-app/src/: App.js
frontend/src/: Login.js
tests/: conftest.py  pyproject.toml  pytest.ini
tests/e2e/: test_login_page.py
tests/integration/: conftest.py  test_get_report.py
tests/integration/login/: test_login.py
tests/integration/reports/: test_create_report.py  test_get_report.py
tests/unit/: test_model.py  test_schema.py
