[tool.poetry]
name = "testworks"
version = "0.1.0"
description = ""
authors = ["Christian Lyons <christian.lyons@pm.me>"]

packages = [
    {include = "app", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = "^2.0.29"
fastapi = "^0.110.2"
python-dotenv = "^1.0.1"
pyodbc = "^5.1.0"
uvicorn = "^0.29.0"
redis = "^5.0.4"
httpx = "^0.27.0"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.2"
ruff = "^0.4.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
